--- a/src/components/Technology.css
+++ b/src/components/Technology.css
@@ -1,5 +1,11 @@
 .tech-logo {
     padding: 15px;
-    border-radius: 20%;
+    border-radius: 25px;
     width: 10vw;
+}
+
+.tech-logo-small {
+    padding: 5px;
+    border-radius: 15px;
+    width: 4vw;
 }
