fix: css issues

--- a/src/components/Technology.css
+++ b/src/components/Technology.css
@@ -1,11 +1,11 @@
 .tech-logo {
     padding: 15px;
     border-radius: 25px;
-    width: 10vw;
+    width: 7em;
 }
 
 .tech-logo-small {
     padding: 5px;
     border-radius: 15px;
-    width: 4vw;
+    width: 3em;
 }
