feat: mobile styles and css fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,29 @@ body {
 .no-padding {
     padding: 0;
 }
+
+.align-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+
+.copy-to-clipboard {
+    cursor: pointer;
+}
+
+.main-info-container {
+    background: #1BC5C1;
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+img {
+    user-drag: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
