--- a/src/components/job-position-desc/job-position-desc.scss
+++ b/src/components/job-position-desc/job-position-desc.scss
@@ -35,6 +35,32 @@
 
     img {
         max-height: 25em;
+        max-width: 100%;
     }
 
+}
+
+.job-position-desc {
+    &__header-container {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+
+        img {
+            width: 100px;
+            height: 100px;
+        }
+    }
+
+    &__main-info-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: #1BC5C1;
+        color: white;
+        border-radius: 10px;
+        padding: 10px;
+        width: 100%;
+    }
 }
